# thesis-osm-contributors

./: LICENSE.txt  README.md  pyproject.toml
plots/01_prediction/SGD/: SGD_model_results_2025-09-17_12-35-10.csv
results/: README.md  results.md
results/00_preprocessing/daily/: README.md  user_daily_activity_ABW.parquet  user_daily_activity_AFG.parquet
results/01_prediction/: extraction_and_comparison.md
results/01_prediction/supervised_learning/metrics/Random_Forest/: RF_model_results_2025-09-17_12-06-32.csv
results/02_categorization/: README.md
results/02_categorization/results/: gmm_bic_aic_2025-09-29_19-46-18.csv  metrics_kmeans_2025-09-29_19-46-18.csv  pca_loadings_2025-09-29_19-46-18.csv
sql/: 00_categorization_user_summary.sql  00_prediction_user_summary_180d.sql
src/00_preprocessing/: 001_preprocessing.py  002_data_preparation.py
src/01_prediction/: 011_Random_Forest.py  012_SGD_classifier.py
src/02_categorization/: 021_user_cat.py  user_categorization.md
